--- a/main.html
+++ b/main.html
@@ -5,6 +5,7 @@
 	<title>Streetfighter</title>
 	<link rel="stylesheet" href="css/normalize.css">
 	<link rel="stylesheet" href="css/main.css">
+  <link href='https://fonts.googleapis.com/css?family=Abril+Fatface' rel='stylesheet' type='text/css'>
   <script src="http://code.jquery.com/jquery.min.js"></script>
 	<script src="js/app.js"></script>
 </head>
@@ -14,6 +15,11 @@
       <div class="ryu-still"></div>
       <div class="ryu-ready"></div>
       <div class="ryu-throwing"></div>
+      <div class="ryu-cool"></div>
+    </div>
+    <div class="instructions">
+      <p class="clicktext">Click on Ryu to throw a Hadouken!</p>
+      <p class="presstext">Press X to see Ryu's cool pose!</p>
     </div>
     <div class="hadouken"></div>
   </div>
