--- a/main.html
+++ b/main.html
@@ -21,6 +21,12 @@
       <p class="clicktext">Click on Ryu to throw a Hadouken!</p>
       <p class="presstext">Press X to see Ryu's cool pose!</p>
     </div>
+    <div class="hulk-ryu">
+      <div class="ryu-still "></div>
+      <div class="ryu-ready"></div>
+      <div class="ryu-throwing"></div>
+      <div class="ryu-cool"></div>
+    </div>
     <div class="hadouken"></div>
   </div>
   <audio id="hadouken-sound" src="sound/hadouken.mp3">
