Center align instructions text. Add serperate Ryu classes

--- a/main.html
+++ b/main.html
@@ -22,10 +22,10 @@
       <p class="presstext">Press X to see Ryu's cool pose!</p>
     </div>
     <div class="hulk-ryu">
-      <div class="ryu-still "></div>
-      <div class="ryu-ready"></div>
-      <div class="ryu-throwing"></div>
-      <div class="ryu-cool"></div>
+      <div class="hulk-ryu-still "></div>
+      <div class="hulk-ryu-ready"></div>
+      <div class="hulk-ryu-throwing"></div>
+      <div class="hulk-ryu-cool"></div>
     </div>
     <div class="hadouken"></div>
   </div>
