--- a/main.html
+++ b/main.html
@@ -18,8 +18,8 @@
       <div class="ryu-cool"></div>
     </div>
     <div class="instructions">
-      <p class="clicktext">Click on Ryu to throw a Hadouken!</p>
-      <p class="presstext">Press X to see Ryu's cool pose!</p>
+      <p class="clicktext">Click on a Ryu to throw a Hadouken!</p>
+      <p class="presstext">Press X or C to see Ryu's cool pose!</p>
     </div>
     <div class="hulk-ryu">
       <div class="hulk-ryu-still "></div>
@@ -28,6 +28,7 @@
       <div class="hulk-ryu-cool"></div>
     </div>
     <div class="hadouken"></div>
+    <div class="hulk-ryu-hadouken"></div>
   </div>
   <audio id="hadouken-sound" src="sound/hadouken.mp3">
 </body>
