Fix instructions type

--- a/main.html
+++ b/main.html
@@ -19,7 +19,7 @@
     </div>
     <div class="instructions">
       <p class="clicktext">Click on a Ryu to throw a Hadouken!</p>
-      <p class="presstext">Press X or C to see Ryu's cool pose!</p>
+      <p class="presstext">Press X or V to see Ryu's cool pose!</p>
     </div>
     <div class="hulk-ryu">
       <div class="hulk-ryu-still "></div>
